--- a/info.yaml
+++ b/info.yaml
@@ -1,10 +1,10 @@
 # Tiny Tapeout project information (Wokwi project)
 project:
   wokwi_id:     413387481972305921       # Set this to the ID of your Wokwi project (the number from the project's URL)
-  title:        ""      # Project title
-  author:       ""      # Your name
-  discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  ""      # One line description of what your project does
+  title:        "Abey's 1st Chip Design"      # Project title
+  author:       "Abey Varghese"      # Your name
+  discord:      "awesomeblossomicious"      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
+  description:  "1st Project with 3 AND Gates"      # One line description of what your project does
   language:     "Wokwi" # other examples include SystemVerilog, Amaranth, VHDL, etc
   clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
 
